# captains-log

./: .captains-log-hook-test  .gitignore  .pre-commit-config.yaml  INSTALLATION.md  Makefile  PUBLISHING.md  README-CI.md  README.md  btw  commit-msg  grow.py  install-with-precommit.sh  install.sh  justfile  pyproject.toml  stone  test_after_merge.txt  test_hook.py  test_hook_precommit.py  test_hook_trigger.md  test_install.txt  test_log_organization.txt  test_package.txt  test_wnext.py  test_wtf.py  update-log.py  update_log.py  wnext  wtf
.github/workflows/: ci.yml  release.yml  test.yml
apps/scripts/: btw
hooks/: captains-log  commit-msg-precommit  pre-commit  pre-push
src/: __init__.py  _version.py  app.py  btw.py  cli.py  cli_logging.py  shortcuts.py  stone.py  update_log.py  wnext.py  wtf.py
src/config/: __init__.py  config_loader.py  config_models.py
src/entries/: __init__.py  entry_formatter.py  entry_models.py  entry_processor.py
src/git/: __init__.py  commit_parser.py  git_operations.py
src/logs/: __init__.py  log_manager.py  log_models.py  log_parser.py  log_writer.py
src/projects/: __init__.py  project_finder.py  project_models.py
tests/: test_app.py  test_btw.py  test_cli.py  test_cli_logging.py  test_config.py  test_entries.py  test_git.py  test_installation.py  test_logs.py  test_milestones.py  test_projects.py  test_shortcuts.py  test_update_log.py  test_wnext.py  test_wtf.py
